--- a/src/main/resources/css/GameStyles.css
+++ b/src/main/resources/css/GameStyles.css
@@ -1,30 +1,93 @@
 .background{
-    -fx-background-color: #FFF8DC;
+    -fx-background-color: #D3D3D3;
 }
 
 .menu-background {
-    -fx-background-color: #4169E1;
+    -fx-background-color: #7592E9;
+    -fx-border-color: derive(-fx-control-inner-background, -60%);
+    -fx-border-width: 2px;
 }
 
 .menu-button {
-    -fx-background-color: #A6B9F1;
+    -fx-background-color: #B5C4F3;
+    -fx-pref-width: 50;
+    -fx-pref-height: 20;
     -fx-font: arial;
     -fx-font-size: 12px;
+    -fx-text-alignment: center;
+    -fx-prompt-text-fill: derive(-fx-control-inner-background, -50%);
+    -fx-border-color: derive(-fx-control-inner-background, -60%);
+    -fx-border-width: 2px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 7px;
+    -fx-padding: 10px;
 }
 
-.sidebar-button{
-    -fx-background-color: #A6B9F1;
+.big-menu-button {
+    -fx-background-color: #B5C4F3;
+    -fx-pref-width: 100;
+    -fx-pref-height: 45;
+    -fx-font: arial;
+    -fx-font-size: 12px;
+    -fx-prompt-text-fill: derive(-fx-control-inner-background, -50%);
+    -fx-border-color: derive(-fx-control-inner-background, -60%);
+    -fx-border-width: 2px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 7px;
+    -fx-padding: 10px;
+}
+
+.big-home-button {
+    -fx-background-color: #B5C4F3;
+    -fx-pref-width: 150;
+    -fx-pref-height: 50;
+    -fx-font: arial;
+    -fx-font-size: 12px;
+    -fx-text-alignment: center;
+    -fx-prompt-text-fill: derive(-fx-control-inner-background, -50%);
+    -fx-border-color: derive(-fx-control-inner-background, -60%);
+    -fx-border-width: 2px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 7px;
+    -fx-padding: 10px;
+}
+
+.steps-button{
+    -fx-background-color: #B5C4F3;
+    -fx-pref-width: 150;
+    -fx-font: arial;
+    -fx-font-size: 12px;
+    -fx-text-alignment: center;
+    -fx-prompt-text-fill: derive(-fx-control-inner-background, -50%);
+    -fx-border-color: derive(-fx-control-inner-background, -60%);
+    -fx-border-width: 2px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 7px;
+    -fx-padding: 10px;
+}
+
+.menu-combobox {
+    -fx-background-color: #B5C4F3;
+    -fx-font: arial;
+    -fx-font-size: 12px;
+    -fx-prompt-text-fill: derive(-fx-control-inner-background, -50%);
+    -fx-border-color: derive(-fx-control-inner-background, -60%);
+    -fx-border-width: 2px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 7px;
+    -fx-padding: 10px;
 }
 
 .homepage-header {
-    -fx-text-fill: #4169E1;
+    -fx-text-fill: #7592E9;
     -fx-font-size: 30px;
     -fx-alignment: center;
 }
 
 .menu-label {
-    -fx-text-fill: #FFF8DC;
+    -fx-text-fill: #D3D3D3;
     -fx-font-size: 16px;
     -fx-font: arial;
 }
+
 
